# sauronx

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE.txt  README.md  SECURITY.md  codemeta.json  pyproject.toml  tox.ini
.github/workflows/: commit.yml
docs/: conf.py  index.rst
sauronx/: alive.py  arduino.py  audio.py  configuration.py  data_manager.py  global_audio.py  locks.py  main.py  paths.py  preview.py  protocol.py  prototype.py  results.py  run_modes.py  runner.py  sensors.py  stimulus.py  submission.py  utils.py
