[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.0", "coverage[toml]"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "sauronx"
version = "0.1.0"
description = "SauronX"
keywords = ["arduino", "sauron"]
authors = ["Douglas Myers-Turnbull", "Cole Helsell"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dmyersturnbull/sauronx"
repository = "https://github.com/dmyersturnbull/sauronx"
documentation = "https://sauronx.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: C++",
	"Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Typing :: Typed"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/sauronx/actions"
Issues = "https://github.com/dmyersturnbull/sauronx/issues"
Download = "https://pypi.org/project/sauronx/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
sauronx = "sauronx.cli:cli"

[tool.poetry.dependencies]
python                   = ">=3.8, <4"
typer                    = ">=0.3, <1.0"
tomlkit                  = ">=0.7, <1.0"
soundfile                = ">=0.10, <1.0"
numpy                    = "^1.19"
pandas                   = ">=1.2, <2.0"
peewee                   = ">=3.14, <4.0"
pillow                   = "^8"
pydub                    = ">=0.24, <1.0"
typeddfs                 = ">=0.4.0, <1.0"
pocketutils              = {version=">=0.4.0, <1.0", extras=["tools"]}
valarpy                  = "^2.2"
PyMata                   = ">=2.20, <3.0"
opencv-python-headless   = ">=4.5, <5.0"
terminaltables           = "^3"
pyaudio                  = ">=0.2, <1.0"

[tool.poetry.dev-dependencies]
pre-commit               = ">=2.9, <3.0"
pre-commit-hooks         = ">=3.4, <4.0"
bandit                   = ">=1.7, <2.0"
pytest                   = ">=6.2, <7.0"
black                    = {git = "https://github.com/psf/black.git", rev="692c0f50d91e"}
coverage                 = {extras = ["toml"], version = ">=5.3, <6.0"}
hypothesis               = ">=6.0, <7.0"
pytest-cov               = ">=2.10, <3.0"
sphinx                   = ">=3.4, <4.0"
sphinx-autoapi           = ">=1.5, <2.0"
sphinx-rtd-theme         = ">=0.5, <1.0"
flake8                   = ">=3.8, <4.0"
flake8-docstrings        = ">=1.5, <2.0"
flake8-bugbear           = ">=20"

pre-commit               = "^2"
pytest                   = "^6"
pytest-cov               = ">=2.10, <3.0"
coverage                 = ">=5.2, <6.0"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = ">=0.5, <1.0"
mypy                     = ">=0.700, <1.0"
flake8                   = "^3"
flake8-docstrings        = "^1"
black                    = "=19.10b0"
isort                    = "^5"
sphinx-autodoc-typehints = "^1"
hypothesis               = "^6"
flake8-bandit            = "^2"
flake8-bugbear           = "^20"

[tool.poetry.extras]
dev = [
    "pre-commit", "pre-commit-hooks",
    "pytest", "coverage", "pytest-cov", "hypothesis",
    "sphinx", "sphinx-autoapi",
    "flake8", "flake8-docstrings",
    "bandit", "black", "flake8-bugbear",
    "hypothesis"
]


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align    = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "'2020-09-10'"
copyright          = "'Copyright 2016–2020'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
	"Cole Helsell <github:chelsell,orcid:0000-0002-8869-3125>"
]
contributors = [
	"Chris S Ki <github:chriski777>"
]
maintainers = "tool.tyrannosaurus.sources.authors"


[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
environment  = false


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["sauronx"]

[tool.coverage.run]
source = ["sauronx"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100

[mypy]
check_untyped_defs = true
strict_optional = true
